Add header and navigation buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <title>Portfolio</title>
     </head>
     <body>
-
+        <div id="page">
+            <div id="header">
+                <h1 id="name">Noelia Xelhua</h1>
+                <ul id="links">
+                    <li><a>Portfolio</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Contact</a></li>
+                </ul>
+            </div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
