--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
                     <li><a>Contact</a></li>
                 </ul>
             </div>
+            <div id="about">
+                <h2 class="header">About</h2>
+                <div id="content">
+                    <div id="picture"></div>
+                    <p id="text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna 
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                        Duis aute irure dolor in reprehenderit in voluptate velit 
+                        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                        occaecat cupidatat non proident, sunt in culpa qui officia 
+                        deserunt mollit anim id est laborum.
+                    </p>
+                </div>
+            </div>
         </div>
         <script src="script.js"></script>
     </body>
